--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2048 Hex</h1>
-      <div class="scores-container">
-        <div class="score-container">0</div>
-        <div class="best-container">0</div>
-      </div>
+      <img class="logo" src="./style/img/2048logo.png">
+      <div class="score-container">0</div>
+      <div class="best-container">0</div>
     </div>
-    <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+
+    <div class="above-game">
+      <p class="game-intro">Merge the squares and get to the <strong>final tile!</strong></p>
+    </div>
 
     <div class="game-container">
       <div class="game-message">
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
+          <img class="gameover-gif" src="./style/img/gameover.gif">
           <a class="retry-button">Try again</a>
         </div>
       </div>
@@ -77,11 +79,14 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use the keys <strong>W, E, A, D, Z, X</strong> to move the tiles in the six possible directions. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <p>If you're on <strong>PC, use W, E, A, D, Z, X</strong> to move the tiles. If you're on <strong>mobile</strong>, <strong>then swipe!</strong></p>
+      <p>When two tiles with the same player collide, they <strong>merge into one!</strong> Try to do this as many times as possible to <strong>get to the end, or at least a high score.</strong></p>
+      <p>You get a game over when you can't move any more tiles.</p>
     </p>
     <hr>
     <p>
-    Created by <a href="https://www.facebook.com/rudradevbasak" target="_blank">Rudradev Basak.</a> Based on <a href="http://gabrielecirulli.github.io/2048/" target="_blank">2048 by Gabriele Cirulli</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Hex version by <a href="https://www.facebook.com/rudradevbasak" target="_blank">Rudradev Basak.</a> Based on <a href="http://gabrielecirulli.github.io/2048/" target="_blank">2048 by Gabriele Cirulli</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Forked from Glukascewic1's  <a href="https://github.com/glukascewic1/1_hex/">1_hex.</a> 
     </p>
   </div>
 
