Correct usage of 'squares' to 'tiles'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Merge the squares and get to the <strong>final tile!</strong></p>
+      <p class="game-intro">Merge the tiles and get to the <strong>final tile!</strong></p>
     </div>
 
     <div class="game-container">
